# ble-messaging

./: .gitignore  Cargo.toml  README.md
.github/workflows/: android-build.yml  ios-build.yml  rust-ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
crates/drop-core/: Cargo.toml
crates/drop-core/src/: lib.rs
crates/drop-core/src/bloom/: mod.rs
crates/drop-core/src/crypto/: encryption.rs  identity.rs  mod.rs
crates/drop-core/src/protocol/: chunk.rs  handshake.rs  message.rs  mod.rs
crates/drop-core/src/store/: db.rs
crates/drop-ffi/: Cargo.toml
crates/drop-ffi/src/: lib.rs
docs/: protocol-spec.md
ios/: README.md
ios/Drop/: Drop.entitlements
ios/Drop/Drop/: DropApp.swift  Info.plist
ios/Drop/Drop/BLE/: BleCentral.swift  BleConstants.swift  BleManager.swift  BlePeripheral.swift
ios/Drop/Drop/Data/: DropRepository.swift
ios/Drop/Drop/Models/: ChatMessage.swift  Conversation.swift
ios/Drop/Drop/Views/: ChatView.swift  ContentView.swift  ConversationListView.swift
macos/DropTest/: Package.swift
macos/DropTest/.build/: build.db  debug.yaml
macos/DropTest/.build/arm64-apple-macosx/debug/: DropTest  plugin-tools-description.json
macos/DropTest/.build/arm64-apple-macosx/debug/DropTest.build/: BleCentral.d  BleCentral.swiftdeps  (+14 more)
macos/DropTest/Sources/DropFFI/: drop_ffiFFI.h  module.modulemap
macos/DropTest/Sources/DropTest/: BleCentral.swift  BleConstants.swift  BlePeripheral.swift  DropManager.swift  TerminalUI.swift  drop_ffi.swift  main.swift
scripts/: build-android.sh  build-ios.sh
(+166 files in other folders)
