[workspace]
members = ["crates/drop-core", "crates/drop-ffi", "crates/uniffi-bindgen"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal
drop-core = { path = "crates/drop-core" }

# UniFFI
uniffi = "0.29"

# Crypto
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Data
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bloom filter / hashing
murmur3 = "0.5"

# Misc
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
